wl_output v1 & xdg_output v3
The xdg_output spec says that the compositor must send wl_output::done events from version 3 on. But if the wl_output was bound with version 1 then this event is not available. What should be done in this case?
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
The migration is almost done, at least the rest should happen in the background. There are still a few technical difference between the old cluster and the new ones, and they are summarized in this issue. Please pay attention to the TL:DR at the end of the comment.
The xdg_output spec says that the compositor must send wl_output::done events from version 3 on. But if the wl_output was bound with version 1 then this event is not available. What should be done in this case?
In this case is the server required to send the xdg_output::done event?
mentioned in merge request !138
mentioned in merge request !147
mentioned in merge request !158
mentioned in commit markbolhuis/wlroots@53e08e37
mentioned in merge request wlroots/wlroots!3664 (merged)
mentioned in commit markbolhuis/wlroots@ef8a173c
mentioned in commit markbolhuis/wlroots@746d84d9
mentioned in commit markbolhuis/wlroots@9ab81968